--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -12,7 +12,7 @@ html(lang="en")
     link(rel="canonical", href="https://carloscuesta.me")
     meta(name="og:url", content="https://carloscuesta.me")
     meta(name="twitter:url", content="https://carloscuesta.me")
-
+    script(defer, src="/js/scripts.min.js")
   body
     include ./_includes/_icons.pug
     include ./_includes/_header.pug
